fixed comment handler for GEt & POST
